# snake

./: .gitignore  Cargo.toml  LICENSE
site/: index.html  index.js  index.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
src/: game.rs  lib.rs  prelude.rs
src/game/: apple.rs  snake.rs
src/game/events/: apple.rs
